# Lity

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  platformio.ini
Desktop/apps/: CMakeLists.txt  main.cpp  settings.ini.in
Desktop/cmake/: ExternLibs.cmake
Desktop/src/: CMakeLists.txt
Desktop/src/lity/: DynamicSettings.cpp  DynamicSettings.h  FieldDescriptor.h  MainWindowManager.cpp  MainWindowManager.h
Desktop/src/lity/logic/: Animation.cpp  Animation.h  Converter.cpp  Converter.h  Differ.cpp  Differ.h  Fade.cpp  Field.cpp  LityConfig.h  LityLogic.cpp  LityLogic.h  Point.cpp  Waiter.h
Desktop/src/lity/widgets/: MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui
ESP32_Resistive/: .clangd  CMakeLists.txt  platformio.ini
ESP32_Resistive/src/: Animation.cpp  CrossCalculator.h  IdleReader.cpp  IdleReader.h  LityManager.cpp  LityManager.h  PixelDriver.cpp  PixelDriver.h  main.cpp
ESP32_Resistive/test/: CrossCalculatorTest.cpp  DifferTest.cpp  PointTest.cpp
lib/lity/: Animation.cpp  Animation.h  AnimationFactory.cpp  AnimationFactory.h  Arrowhead.cpp  Arrowhead.h  Blink.cpp  Blink.h  CMakeLists.txt  Circle.cpp  Circle.h  Converter.cpp  Converter.h  Cross.cpp  Cross.h  Differ.cpp  Differ.h  Dot.cpp  Dot.h  Fade.cpp  Fade.h  Field.cpp  Field.h  Figure.cpp  Figure.h  FigureDescription.cpp  FigureDescription.h  FigureFactory.cpp  FigureFactory.h  Javelin.cpp  Javelin.h  LityConfig.h  LityLogic.cpp  LityLogic.h  Point.cpp  Point.h  RGB.h  Rotatable.cpp  Rotatable.h  ScopedBackup.h  (+4 more)
lib/unity/: CMakeLists.txt
src/: Animation.h  AnimationFactory.h  Blink.cpp  Blink.h  Converter.cpp  Converter.h  Coord.h  CrossCalculator.cpp  CrossCalculator.h  Differ.cpp  Differ.h  Fade.cpp  Fade.h  Field.cpp  Field.h  IdleReader.cpp  IdleReader.h  LityConfig.h  LityLogic.cpp  LityLogic.h  LityManager.cpp  LityManager.h  PixelDriver.cpp  PixelDriver.h  Point.cpp  Point.h  RGB.h  Waiter.cpp  Waiter.h  main.cpp
test/: AnimationTest.cpp  CMakeLists.txt  ConverterTest.cpp  CoordTest.cpp  CrossCalculatorTest.cpp  CrossTest.cpp  DifferTest.cpp  FieldTest.cpp  PointTest.cpp  SquareTest.cpp  Tests.h  main.cpp
